--- a/Nettside/WebContent/JanErik.html
+++ b/Nettside/WebContent/JanErik.html
@@ -31,8 +31,8 @@
 		</table>
 		<div class="paragrafer">
 			<strong>Opplevelse med språkene:</strong>
-			<p>ActionSript var det første programmeringsspråket jeg lærte.</br>
-			Det er bregrenset, lukket, og fremfor alt utdatert, men det lot deg gjøre en del ting som kunne være spennende.</br>
+			<p>ActionScript var det første programmeringsspråket jeg lærte.<br>
+			Det er bregrenset, lukket, og fremfor alt utdatert, men det lot deg gjøre en del ting som kunne være spennende.<br>
 			Her er noen eksempler på noen ting jeg likte med ActionScript:</p>
 				<ul>	
 					<li><p>Det er kjapt og enkelt å lage et vindu</p></li>
@@ -40,9 +40,9 @@
 					<li><p>Mange kule effekter, lett å lage noe visuelt</p></li>
 					<li><p>Ganske likt mange andre språk</p></li>
 				</ul>
-			<p>Det er ikke så mye å si om XML og HTML, det er greit å ha et så klart tre.</br>
-			Jeg er nyere på Java men forståelsen overføres ganske bra fra ActionScript.</br>
-			Det har også et større bruksområde enn ActionScript, som gir mange muligheter.</br>
+			<p>Det er ikke så mye å si om XML og HTML, det er greit å ha et så klart tre.<br>
+			Jeg er nyere på Java men forståelsen overføres ganske bra fra ActionScript.<br>
+			Det har også et større bruksområde enn ActionScript, som gir mange muligheter.<br>
 			Jeg er ny når det kommer til CSS og jeg synes det ser veildig spennende og elegant ut.</p>
 		</div>
 	</div>
