Rettet opp noen skrivefeil.

--- a/Nettside/WebContent/JanErik.html
+++ b/Nettside/WebContent/JanErik.html
@@ -32,18 +32,18 @@
 		<div class="paragrafer">
 			<strong>Opplevelse med språkene:</strong>
 			<p>ActionScript var det første programmeringsspråket jeg lærte.<br>
-			Det er bregrenset, lukket, og fremfor alt utdatert, men det lot deg gjøre en del ting som kunne være spennende.<br>
+			Det er begrenset, lukket, og fremfor alt utdatert, men det lot deg gjøre en del ting som kunne være spennende.<br>
 			Her er noen eksempler på noen ting jeg likte med ActionScript:</p>
 				<ul>	
 					<li><p>Det er kjapt og enkelt å lage et vindu</p></li>
-					<li><p>I Flash er det lett og tegne noe og refferere til det i koden</p></li>
-					<li><p>Mange kule effekter, lett å lage noe visuelt</p></li>
-					<li><p>Ganske likt mange andre språk</p></li>
+					<li><p>I Flash(programmet som språket er laget for) er det lett å tegne noe og referere til det i koden</p></li>
+					<li><p>Det er mange kule effekter, lett å lage noe som er visuelt spennende</p></li>
+					<li><p>Ganske likt mange andre programmeringsspråk, som gjør det lettere hvis/når du vil lære noe nytt</p></li>
 				</ul>
-			<p>Det er ikke så mye å si om XML og HTML, det er greit å ha et så klart tre.<br>
-			Jeg er nyere på Java men forståelsen overføres ganske bra fra ActionScript.<br>
-			Det har også et større bruksområde enn ActionScript, som gir mange muligheter.<br>
-			Jeg er ny når det kommer til CSS og jeg synes det ser veildig spennende og elegant ut.</p>
+			<p>Det er ikke så mye å si om XML og HTML, det er greit å noe så klart og oversiktelig.<br>
+			Jeg er nyere med Java men forståelsen overføres ganske bra fra ActionScript siden de er veldig lignende språk.<br>
+			Java har også et større bruksområde enn ActionScript, som gir mange muligheter.<br>
+			Jeg er ny når det kommer til CSS, og jeg synes det ser veldig spennende og elegant ut.</p>
 		</div>
 	</div>
 </body>
