--- a/Nettside/WebContent/JanErik.html
+++ b/Nettside/WebContent/JanErik.html
@@ -40,7 +40,7 @@
 					<li><p>Det er mange kule effekter, lett å lage noe som er visuelt spennende</p></li>
 					<li><p>Ganske likt mange andre programmeringsspråk, som gjør det lettere hvis/når du vil lære noe nytt</p></li>
 				</ul>
-			<p>Det er ikke så mye å si om XML og HTML, det er greit å noe så klart og oversiktelig.<br>
+			<p>Det er ikke så mye å si om XML og HTML, det er greit å ha noe så klart og oversiktelig.<br>
 			Jeg er nyere med Java men forståelsen overføres ganske bra fra ActionScript siden de er veldig lignende språk.<br>
 			Java har også et større bruksområde enn ActionScript, som gir mange muligheter.<br>
 			Jeg er ny når det kommer til CSS, og jeg synes det ser veldig spennende og elegant ut.</p>
