La til topbaren for personlig side

--- a/Nettside/WebContent/JanErik.html
+++ b/Nettside/WebContent/JanErik.html
@@ -6,9 +6,15 @@
 <link rel="stylesheet" href="JEStyleSheet.css">
 </head>
 <body>
+	<div class="menu">
+  		<div class="menu_element"><a href="#home">Forsiden</a></div>
+  		<div class="menu_element"><a href="#anja">Anja</a></div>
+  		<div class="menu_element"><a href="#espen">Espen</a></div>
+  		<div class="menu_element"><a href="#erlend">Erlend</a></div>
+  		<div class="menu_element"><a href="#janerik">Jan Erik</a></div>
+	</div>
 	<div class="container">
 		
-		<a href="HovedSide.html">Tilbake til hovedsiden</a>	
 		<h1>Jan Erik</h1>
 		
 		<img src="BildeAvJanErik.jpg" width=450 height=500/>
