Kan navigere mellom JanErik.html og Forside.html

--- a/Nettside/WebContent/Forside.html
+++ b/Nettside/WebContent/Forside.html
@@ -15,7 +15,7 @@
   		<div class="menu_element"><a href="#anja">Anja</a></div>
   		<div class="menu_element"><a href="#espen">Espen</a></div>
   		<div class="menu_element"><a href="#erlend">Erlend</a></div>
-  		<div class="menu_element"><a href="#janerik">Jan Erik</a></div>
+  		<div class="menu_element"><a href="JanErik.html">Jan Erik</a></div>
 	</div>
 </body>
 </html>
