--- a/Nettside/WebContent/JanErik.html
+++ b/Nettside/WebContent/JanErik.html
@@ -2,22 +2,22 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Testing div</title>
+<title>Jan Erik</title>
 <link rel="stylesheet" href="JEStyleSheet.css">
 </head>
 <body>
 	<div class="menu">
-  		<div class="menu_element"><a href="#home">Forsiden</a></div>
+  		<div class="menu_element"><a href="Forside.html">Forsiden</a></div>
   		<div class="menu_element"><a href="#anja">Anja</a></div>
   		<div class="menu_element"><a href="#espen">Espen</a></div>
   		<div class="menu_element"><a href="#erlend">Erlend</a></div>
-  		<div class="menu_element"><a href="#janerik">Jan Erik</a></div>
+  		<div class="menu_element"><a href="JanErik.html">Jan Erik</a></div>
 	</div>
 	<div class="container">
 		
-		<h1>Jan Erik</h1>
-		
 		<img src="BildeAvJanErik.jpg" width=450 height=500/>
+		
+		<h1>Jan Erik</h1>
 	
 		<h2>Erfaring i programmering:</h2>
 
