Rettet feil i kodeeksempeler, fikset forside linkene.

--- a/Nettside/WebContent/JavaEksempler/JavaIntroduksjon.html
+++ b/Nettside/WebContent/JavaEksempler/JavaIntroduksjon.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 	<div class="menu">
-  		<div class="menu_element"><a href="Forside.html">Forsiden</a></div>
+  		<div class="menu_element"><a href="../Forside.html">Forsiden</a></div>
   		<div class="menu_element"><a href="#anja">Anja</a></div>
   		<div class="menu_element"><a href="#espen">Espen</a></div>
   		<div class="menu_element"><a href="#erlend">Erlend</a></div>
-  		<div class="menu_element"><a href="JanErik.html">Jan Erik</a></div>
+  		<div class="menu_element"><a href="../JanErik.html">Jan Erik</a></div>
 	</div>
 	<div class=container>
 		<h1>Introduksjon</h1>
@@ -36,7 +36,7 @@
  			Akuratt hva det betyr er ikke så viktig nå.<br>
  		</p>
  		<div class=code><pre>
-package nettside;
+package pakke;
 
 public class HelloWorld { 
 
@@ -67,7 +67,7 @@ public class HelloWorld {
  			Java godtar ingen skrivefeil, og man må bli vant til å lete etter skrivefeil.<br>
  		</p>
  		<div class=code><pre>
-package nettside;
+package pakke;
 
 public class HelloWorld { 
 
