La til bunnmeny for forrige eksempel, alle, og neste

--- a/Nettside/WebContent/JavaEksempler/JavaIntroduksjon.html
+++ b/Nettside/WebContent/JavaEksempler/JavaIntroduksjon.html
@@ -104,5 +104,10 @@ public class HelloWorld {
  			Kort fortalt kaller vi System.out.println(), gir tekst som et parameter, og merker slutten av linjen.<br>
 		</p>
 	</div>
+	<div class="bottom_menu">
+  		<div class="bottom_menu_element"><a href="#forrige_java_eksempel">Forrige Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="#alle_java_eksempler">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="#neste_java_eksempel">Neste Eksempel</a></div>
+	</div>
 </body>
 </html>
