Endret navn til om_oss

--- a/Nettside/WebContent/JanErik.html
+++ b/Nettside/WebContent/JanErik.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="menu">
-  		<div class="menu_element"><a href="Forside.html">Forsiden</a></div>
+  		<div class="menu_element"><a href="om_oss.html">Forsiden</a></div>
   		<div class="menu_element"><a href="#anja">Anja</a></div>
   		<div class="menu_element"><a href="#espen">Espen</a></div>
   		<div class="menu_element"><a href="#erlend">Erlend</a></div>
@@ -21,7 +21,7 @@
 	
 		<h2>Erfaring i programmering:</h2>
 
-		<table class="likerTabell">
+		<table class="experienceTable">
 			<tr>
 				<th><p>Kjent med</p></th>
 				<th><p>Ny</p></th>
