--- a/Nettside/WebContent/JavaEksempler/Variabler.html
+++ b/Nettside/WebContent/JavaEksempler/Variabler.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="menu">
-  		<div class="menu_element"><a href="../Forside.html">Forsiden</a></div>
+  		<div class="menu_element"><a href="../om_oss.html">Forsiden</a></div>
   		<div class="menu_element"><a href="#anja">Anja</a></div>
   		<div class="menu_element"><a href="#espen">Espen</a></div>
   		<div class="menu_element"><a href="#erlend">Erlend</a></div>
@@ -15,8 +15,8 @@
 	</div>
 	<div class=container>
 		<h1>Variabler</h1>
-		<p>For å utvite Hello World kan vi bruke noe som kalles en variabel.<br>
-			Variabler er navnt som inneholder forskjellige typer verdier, som tall, tekst, sannhet.<br>
+		<p>For å utvide Hello World kan vi bruke noe som kalles en variabel.<br>
+			Variabler inneholder forskjellige typer verdier, som tall, tekst, sannhet.<br>
 			Til å begynne med kan vi bruke noe som kalles en String.<br>
 			"String" inne holder tekst og vi kan gi en String til metoden System.out.println() istedenfor teksten i seg selv.<br>
 			Vi deklarerer(lager) en String variabel slik:<br></p>
@@ -25,7 +25,7 @@
 			Vi bruker også ikke stor bokstav for det første ordet i navnet, dette er bare slik det vanligvis blir gjort.<br>
 			Vi kan også gi String en verdi, slik:<br></p>
 		<div class=code><pre>helloWorldTekst = "Hello World!";</pre></div>
-		<p>Nå inneholder denne variabelen helloWorldTekst akkuratt den samme teksten som vi ga til System.out.println() i det siste eksempelet.<br>
+		<p>Nå inneholder denne variabelen helloWorldTekst akkurat den samme teksten som vi ga til System.out.println() i det siste eksempelet.<br>
 			Vi kan også gjøre alt dette i samme linje:</p>
 		<div class=code><pre>String helloWorldTekst = "Hello World!";</pre></div>
 		<p>Vi kan sette denne linjen inn i HelloWorld slik som dette:</p>
