--- a/Nettside/WebContent/JavaEksempler/JavaIntroduksjon.html
+++ b/Nettside/WebContent/JavaEksempler/JavaIntroduksjon.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="menu">
-  		<div class="menu_element"><a href="../Forside.html">Forsiden</a></div>
+  		<div class="menu_element"><a href="../om_oss.html">Forsiden</a></div>
   		<div class="menu_element"><a href="#anja">Anja</a></div>
   		<div class="menu_element"><a href="#espen">Espen</a></div>
   		<div class="menu_element"><a href="#erlend">Erlend</a></div>
