Lagt til en overskrift...

--- a/Nettside/WebContent/JavaEksempler/Forside.html
+++ b/Nettside/WebContent/JavaEksempler/Forside.html
@@ -12,10 +12,13 @@
 <body>
 	<div class="menu">
   		<div class="menu_element"><a href="Forside.html">Forsiden</a></div>
-  		<div class="menu_element"><a href="#anja">Anja</a></div>
+  		<div class="menu_element"><a href="Anja.html">Anja</a></div>
   		<div class="menu_element"><a href="#espen">Espen</a></div>
   		<div class="menu_element"><a href="#erlend">Erlend</a></div>
   		<div class="menu_element"><a href="JanErik.html">Jan Erik</a></div>
 	</div>
 </body>
+
+<h1>Prosjekt programmering</h1>
+
 </html>
