--- a/Nettside/WebContent/om_oss.html
+++ b/Nettside/WebContent/om_oss.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="menu">
   		<div class="menu_element"><a href="om_oss.html">Forsiden</a></div>
-  		<div class="menu_element"><a href="#anja">Anja</a></div>
+  		<div class="menu_element"><a href="Anja.html">Anja</a></div>
   		<div class="menu_element"><a href="#espen">Espen</a></div>
   		<div class="menu_element"><a href="#erlend">Erlend</a></div>
   		<div class="menu_element"><a href="JanErik.html">Jan Erik</a></div>
