--- a/Nettside/WebContent/Anja.html
+++ b/Nettside/WebContent/Anja.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="nb">
 <head>
-
+<style> 
+.menu {background-color:black;width:100%} 
+.menu_element {height:40px;width:20%;padding: 10px 0px;background-color:black;text-align:center; float:left;}
+.menu_element a{color:white;text-decoration:none;}
+</style>
 <title>Programmering-Anja</title>
 
 </head>
+
 <body style="background-color:PaleTurquoise"> 
+
+<div class="menu">
+  <div class="menu_element"><a href="om_oss.html">Forsiden</a></div>
+  <div class="menu_element"><a href="Anja.html">Anja</a></div>
+  <div class="menu_element"><a href="#espen">Espen</a></div>
+  <div class="menu_element"><a href="#erlend">Erlend</a></div>
+  <div class="menu_element"><a href="JanErik.html">Jan Erik</a></div>
+</div>
 
 <h1 style="color:SteelBlue;">Anja</h1>
 
