Oppdatert meny-filen med linker...

--- a/Nettside/WebContent/Meny.html
+++ b/Nettside/WebContent/Meny.html
@@ -7,9 +7,9 @@
  </head>
 
 <div class="menu">
-  <div class="menu_element"><a href="#home">Forsiden</a></div>
-  <div class="menu_element"><a href="#anja">Anja</a></div>
-  <div class="menu_element"><a href="#espen">Espen</a></div>
-  <div class="menu_element"><a href="#erlend">Erlend</a></div>
-  <div class="menu_element"><a href="#janerik">Jan Erik</a></div>
+  <div class="menu_element"><a href="om_oss">Forsiden</a></div>
+  <div class="menu_element"><a href="Anja.html">Anja</a></div>
+  <div class="menu_element"><a href="Espen.html">Espen</a></div>
+  <div class="menu_element"><a href="Erlend.html">Erlend</a></div>
+  <div class="menu_element"><a href="JanErik.html">Jan Erik</a></div>
 </div>
