Rettet noen linker

--- a/Nettside/WebContent/om_oss.html
+++ b/Nettside/WebContent/om_oss.html
@@ -15,11 +15,11 @@
   		<div class="menu_element"><a href="om_oss.html">Forsiden</a></div>
   		<div class="menu_element"><a href="Anja.html">Anja</a></div>
   		<div class="menu_element"><a href="#espen">Espen</a></div>
-  		<div class="menu_element"><a href="#erlend">Erlend</a></div>
+  		<div class="menu_element"><a href="Erlend.html">Erlend</a></div>
   		<div class="menu_element"><a href="JanErik.html">Jan Erik</a></div>
 	</div>
 	<div class=container>
-		<img src="gruppe_bilde.jpg"/>
+		<img src="gruppebilde_ferdig.jpg"/>
 		<div class=text_field>
 		<p>Test text Test text Test text Test text Test text Test text Test text
 		Test text Test text Test text Test text Test text Test text Test text Test text Test text <br>
