--- a/Nettside/WebContent/JanErik.html
+++ b/Nettside/WebContent/JanErik.html
@@ -8,20 +8,14 @@
 <body>
 	<div class="menu">
   		<div class="menu_element"><a href="om_oss.html">Forsiden</a></div>
-  		<div class="menu_element"><a href="#anja">Anja</a></div>
+  		<div class="menu_element"><a href="Anja.html">Anja</a></div>
   		<div class="menu_element"><a href="#espen">Espen</a></div>
-  		<div class="menu_element"><a href="#erlend">Erlend</a></div>
+  		<div class="menu_element"><a href="Erlend.html">Erlend</a></div>
   		<div class="menu_element"><a href="JanErik.html">Jan Erik</a></div>
 	</div>
 	<div class="container">
 		
 		<img src="BildeAvJanErik.jpg" width=450 height=500/>
-		
-<<<<<<< Updated upstream
-		<h1>Jan Erik</h1>
-=======
-		<img src="BildeAvJanErik.jpg" width=300 height=500/>
->>>>>>> Stashed changes
 	
 		<h2>Erfaring i programmering:</h2>
 
