--- a/Nettside/WebContent/JavaEksempler/JavaIntroduksjon.html
+++ b/Nettside/WebContent/JavaEksempler/JavaIntroduksjon.html
@@ -8,9 +8,9 @@
 <body>
 	<div class="menu">
   		<div class="menu_element"><a href="../om_oss.html">Forsiden</a></div>
-  		<div class="menu_element"><a href="#anja">Anja</a></div>
+  		<div class="menu_element"><a href="../Anja.html">Anja</a></div>
   		<div class="menu_element"><a href="#espen">Espen</a></div>
-  		<div class="menu_element"><a href="#erlend">Erlend</a></div>
+  		<div class="menu_element"><a href="../Erlend.html">Erlend</a></div>
   		<div class="menu_element"><a href="../JanErik.html">Jan Erik</a></div>
 	</div>
 	<div class=container>
