Oppdatert navn på gruppebilde

--- a/Nettside/WebContent/om_oss.html
+++ b/Nettside/WebContent/om_oss.html
@@ -19,7 +19,7 @@
   		<div class="menu_element"><a href="JanErik.html">Jan Erik</a></div>
 	</div>
 	<div class=container>
-		<img src="gruppe_bilde.jpg"/>
+		<img src="gruppebilde.jpg"/>
 		<div class=text_field>
 		<p>Test text Test text Test text Test text Test text Test text Test text
 		Test text Test text Test text Test text Test text Test text Test text Test text Test text <br>
