Fikset meny-linker til oss andre :)

--- a/Nettside/WebContent/Erlend.html
+++ b/Nettside/WebContent/Erlend.html
@@ -13,11 +13,11 @@
     
     <body>
         <div class="menu">
-            <div class="menu_element"><a href="Forside.html">Forsiden</a></div>
-            <div class="menu_element"><a href="#Anja">Anja</a></div>
-            <div class="menu_element"><a href="#espen">Espen</a></div>
+            <div class="menu_element"><a href="om_oss.html">Forsiden</a></div>
+            <div class="menu_element"><a href="Anja.html">Anja</a></div>
+            <div class="menu_element"><a href="Espen.html">Espen</a></div>
             <div class="menu_element"><a href="Erlend.html">Erlend</a></div>
-            <div class="menu_element"><a href="JanErik.html">JanErik</a></div>
+            <div class="menu_element"><a href="JanErik.html">Jan Erik</a></div>
             
         </div>
         <div class="container">
