--- a/Nettside/WebContent/JavaEksempler/Variabler.html
+++ b/Nettside/WebContent/JavaEksempler/Variabler.html
@@ -10,7 +10,7 @@
   		<div class="menu_element"><a href="../om_oss.html">Forsiden</a></div>
   		<div class="menu_element"><a href="../Anja.html">Anja</a></div>
   		<div class="menu_element"><a href="#espen">Espen</a></div>
-  		<div class="menu_element"><a href="../Erlend.html>Erlend</a></div>
+  		<div class="menu_element"><a href="../Erlend.html">Erlend</a></div>
   		<div class="menu_element"><a href="../JanErik.html">Jan Erik</a></div>
 	</div>
 	<div class=container>
