--- a/Nettside/WebContent/om_oss.html
+++ b/Nettside/WebContent/om_oss.html
@@ -19,6 +19,7 @@
   		<div class="menu_element"><a href="JanErik.html">Jan Erik</a></div>
 	</div>
 	<div class=container>
+		<h1>Gruppe 1 - Prosjekt programmering</h1>
 		<img src="gruppebilde.jpg"; style="width:50%; float:left"/>
 		<div class=text_field>
 		<p>Test text Test text Test text Test text Test text Test text Test text
