--- a/Nettside/WebContent/om_oss.html
+++ b/Nettside/WebContent/om_oss.html
@@ -21,7 +21,7 @@
 	<div class=container>
 		<h1>Gruppe 1 - Prosjekt programmering</h1>
 			<div class=img_container>
-			<img src="gruppebilde.jpg"; style="width:50%; float:left"/>
+			<img src="gruppebilde.jpg"/>
 			<div class="bildetekst">Fra venstre: Jan Erik, Anja, Espen og Erlend</div>
 			</div>
 		<div class=text_field>
