Lagt til overskrift 2

--- a/Nettside/WebContent/om_oss.html
+++ b/Nettside/WebContent/om_oss.html
@@ -24,6 +24,8 @@
 			<img src="gruppebilde.jpg" alt="Gruppebilde"/>
 			<div class="bildetekst">Fra venstre: Jan Erik, Anja, Espen og Erlend</div>
 			</div>
+		<h2>Om prosjektet vårt:</h2>
+		
 		<div class=text_field>
 		<p>Test text Test text Test text Test text Test text Test text Test text
 		Test text Test text Test text Test text Test text Test text Test text Test text Test text <br>
