Lagt til beskrivelsen av prosjektet

--- a/Nettside/WebContent/om_oss.html
+++ b/Nettside/WebContent/om_oss.html
@@ -27,33 +27,13 @@
 		<h2>Om prosjektet vårt:</h2>
 		
 		<div class=text_field>
-		<p>Test text Test text Test text Test text Test text Test text Test text
-		Test text Test text Test text Test text Test text Test text Test text Test text Test text <br>
-		Test text Test text Test text Test text Test text Test text Test text
-		Test text Test text Test text Test text Test text Test text Test text Test text Test text <br>
-		Test text Test text Test text Test text Test text Test text Test text
-		Test text Test text Test text Test text Test text Test text Test text Test text Test text <br>
-		Test text Test text Test text Test text Test text Test text Test text Test text Test text
-		Test text Test text Test text Test text Test text Test
-		Test text Test text Test text Test text Test text Test text Test text Test text Test text <br>
-		Test text Test text Test text Test text Test text Test text Test
-		Test text Test text Test text Test text Test text Test text Test text Test text Test text <br>
-		Test text Test text Test text Test text Test text Test text Test text Test text Test text
-		Test text Test text Test text Test text Test text Test text Test text Test text Test text <br>
-		Test text Test text Test text Test text Test text Test text Test text Test text Test textst text Test text Test text
-		Test text Test text Test text Test text Test text Test text Test text Test text Test text <br>
-		Test text Test text Test text Test text 
-		Test text Test text Test text Test text Test text Test text Test text Test text Test text <br>
-		Test text Test text Test text Test text Test text Test te
-		Test text Test text Test text Test text Test text Test text Test text Test text Test text <br>
-		Test text Test text Test text Te
-		Test text Test text Test text Test text Test text Test text Test text Test text Test text <br>
-		Test text Test text Test text Test text Test te
-		Test text Test text Test text Test text Test text Test text Test text Test text Test text <br>
-		Test text Test text Test text Test text Test text Test text Te
-		Test text Test text Test text Test text Test text Test text Test text Test text Test text <br>
-		Test text Test text Test text Test tex
-		Test text Test text Test text Test text Test text Test text Test text Test text Test text <br></p>
+		<p>I prosjektet vårt vil vi lage en ny og spennende norsk nettside om programmering. 
+		
+		Det finnes relativt begrensede online ressurser om programmering på norsk. De som finnes er gjerne enten beregnet på en liten andel av begynnende programmerere, eller laget for å brukes i kombinasjon med en analoge ressurser. 
+
+		Nettsiden er for alle som er nysgjerrige og vil lære seg å programmere, eller vil lære et nytt språk. Nettsiden fokuserer hovedsakelig på programmering i Java og webprogrammering, men er ikke begrenset til det. 
+
+		Vi vil lage denne nettsiden ved å kombinere teori, kodesnutter og linke til mange relevante og interessante eksterne ressurser.
 		</div>
 	</div>
 </body>
