Created distance between image and text

--- a/Nettside/WebContent/om_oss.html
+++ b/Nettside/WebContent/om_oss.html
@@ -18,15 +18,15 @@
   		<div class="menu_element"><a href="Erlend.html">Erlend</a></div>
   		<div class="menu_element"><a href="JanErik.html">Jan Erik</a></div>
 	</div>
-	<div class=container>
+	<div class="container">
 		<h1>Gruppe 1 - Prosjekt programmering</h1>
-			<div class=img_container>
+			<div class="img_container">
 			<img src="gruppebilde.jpg" alt="Gruppebilde"/>
 			<div class="bildetekst">Fra venstre: Jan Erik, Anja, Espen og Erlend</div>
 			</div>
 		<h2>Om prosjektet vårt:</h2>
 		
-		<div class=text_field>
+		<div class="text_field">
 		<p>I prosjektet vårt vil vi lage en ny og spennende norsk nettside om programmering. 
 		
 		Det finnes relativt begrensede online ressurser om programmering på norsk. De som finnes er gjerne enten beregnet på en liten andel av begynnende programmerere, eller laget for å brukes i kombinasjon med en analoge ressurser. 
