--- a/Nettside/WebContent/Erlend.html
+++ b/Nettside/WebContent/Erlend.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-    <head lang="no">
+<html lang="nb">
+    <head>
         <meta charset="utf-8">
            <title>Erlend</title>
         <link rel="stylesheet" href="JEStyleSheet.css">  
@@ -10,7 +10,7 @@
             .menu_element a{color:white;text-decoration:none;}
             
             .profilBilde {position: absolute; left: 500px;}
-            .experienceTable, th, td {background-color:; border: 1px solid black; width: 250px;}
+            .experienceTable, th, td {background-color: Beige; border: 1px solid black; width: 250px;}
         </style>
     </head>
     
@@ -25,7 +25,7 @@
         </div>
         <div class="container">
             <h1>Erlend</h1>
-            <img src="erlend.jpg" width="200" height="340">
+            <img src="erlend.jpg" class="profilBilde" alt="Profilbilde_Erlend" width="200" height="340">
             <h2>Erfaring i programmering</h2>
             <table class="experienceTable">
                 <tr>
