--- a/Nettside/WebContent/Anja.html
+++ b/Nettside/WebContent/Anja.html
@@ -5,6 +5,7 @@
 .menu {background-color:black;width:100%} 
 .menu_element {height:40px;width:20%;padding: 10px 0px;background-color:black;text-align:center; float:left;}
 .menu_element a{color:white;text-decoration:none;}
+.textfield {padding-left: 10px}
 </style>
 <title>Programmering-Anja</title>
 
@@ -24,7 +25,7 @@
 
 <img src="Anja.jpg" alt="Profilbilde_Anja" style="width:20%; float:left">
 
-<p> Anja har bakgrunn fra matematikk, administrasjon, undervisning og eksamen.
+<div class="textfield"> <p> Anja har bakgrunn fra matematikk, administrasjon, undervisning og eksamen.
 </p>
 
 <h2 style="color:SteelBlue;"> Erfaring med relevante teknologier </h2>
@@ -46,6 +47,7 @@
 	</li>
 		
 </ul>
+</div>
 
 </body>
 </html>
