--- a/Nettside/WebContent/Anja.html
+++ b/Nettside/WebContent/Anja.html
@@ -5,7 +5,7 @@
 .menu {background-color:black;width:100%} 
 .menu_element {height:40px;width:20%;padding: 10px 0px;background-color:black;text-align:center; float:left;}
 .menu_element a{color:white;text-decoration:none;}
-.textfield {padding-left: 10px}
+.textfield {width:50%;float:right}
 </style>
 <title>Programmering-Anja</title>
 
@@ -23,7 +23,7 @@
 
 <h1 style="color:SteelBlue;">Anja</h1>
 
-<img src="Anja.jpg" alt="Profilbilde_Anja" style="width:20%; float:left">
+<img src="Anja.jpg" alt="Profilbilde_Anja" style="width:40%; float:left;">
 
 <div class="textfield"> <p> Anja har bakgrunn fra matematikk, administrasjon, undervisning og eksamen.
 </p>
