--- a/Nettside/WebContent/JanErik.html
+++ b/Nettside/WebContent/JanErik.html
@@ -15,7 +15,7 @@
 	</div>
 	<div class="container">
 		
-		<img src="BildeAvJanErik.jpg" width=450 height=500/>
+		<img src="Janerik.jpeg" width=250 height=300/>
 	
 		<h2>Erfaring i programmering:</h2>
 
