--- a/Nettside/WebContent/Anja.html
+++ b/Nettside/WebContent/Anja.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="nb">
 <head>
+<meta charset="utf-8">
 <style> 
 .menu {background-color:black;width:100%} 
 .menu_element {height:40px;width:20%;padding: 10px 0px;background-color:black;text-align:center; float:left;}
@@ -38,7 +39,7 @@
 		</ul>
 		</li>
 		
-	<li><strong>Programmeringspråk:</strong>
+	<li><strong>ProgrammeringsprÃ¥k:</strong>
 		<ul>
 			<li>C++</li>
 			<li>Java</li>
