Fikset små problem med encoding

--- a/Nettside/WebContent/Anja.html
+++ b/Nettside/WebContent/Anja.html
@@ -31,7 +31,7 @@
 
 <h2 style="color:SteelBlue;"> Erfaring med relevante teknologier </h2>
 <ul>
-	<li><strong>Markup languages:</strong>
+	<li><strong>Markeringsspråk (markup languages):</strong>
 		<ul>
 			<li>MimeTex</li>
 			<li>LaTex</li>
@@ -39,7 +39,7 @@
 		</ul>
 		</li>
 		
-	<li><strong>ProgrammeringsprÃ¥k:</strong>
+	<li><strong>Programmeringspråk:</strong>
 		<ul>
 			<li>C++</li>
 			<li>Java</li>
