--- a/Nettside/WebContent/Espen.html
+++ b/Nettside/WebContent/Espen.html
@@ -44,9 +44,9 @@
         <h3 style = "font-family: monospace; text-align: center;"><strong> Om meg:</strong></h3>
     
     <div class = "paragrafer">
-        <p> Er 28 Ã¥r og har jobbet meste parten av tiden som Elektriker, men fant ut at jeg ville tilbake<br>
-         til skolebenken Ã¥ prÃ¸ve noe nytt. GÃ¥r nÃ¥ mitt fÃ¸rste semester pÃ¥ HÃ¸gskule pÃ¥ Vestland.<br>
-            Jeg er ganske fersk innom progammering har litt kjennskap til noen sprÃ¥k. <br>
+        <p> Er 28 år og har jobbet mesteparten av tiden som Elektriker, men fant ut at jeg ville tilbake<br>
+         til skolebenken å prøve noe nytt. Går nå mitt første semester på Høgskule på Vestland.<br>
+            Jeg er ganske fersk innom progammering har litt kjennskap til noen språk. <br>
         </p>
     </div>
     
