--- a/Nettside/WebContent/Anja.html
+++ b/Nettside/WebContent/Anja.html
@@ -39,7 +39,7 @@
 		</ul>
 		</li>
 		
-	<li><strong>Programmeringspråk:</strong>
+	<li><strong>Programmeringsspråk:</strong>
 		<ul>
 			<li>C++</li>
 			<li>Java</li>
