Om oss oppdatert til felles CSS-fil

--- a/Nettside/WebContent/om_oss.html
+++ b/Nettside/WebContent/om_oss.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="utf-8">
 <title>Prosjekt Programmering</title>
-<link rel="stylesheet" href="om_oss.css">
-<style>
-	.menu {background-color:black;width:100%} 
-	.menu_element {height:40px;width:20%;padding: 10px 0px;background-color:black;text-align:center; float:left;}
-	.menu_element a{color:white;text-decoration:none;}
-</style>
+<link rel="stylesheet" href="JEStyleSheet.css">
+<!-- <style> -->
+<!-- /* 	.menu {background-color:black;width:100%}  */ -->
+<!-- /* 	.menu_element {height:40px;width:20%;padding: 10px 0px;background-color:black;text-align:center; float:left;} */ -->
+<!-- /* 	.menu_element a{color:white;text-decoration:none;} */ -->
+<!-- </style> -->
 </head>
 <body>
 	<div class="menu">
@@ -18,7 +18,7 @@
   		<div class="menu_element"><a href="Erlend.html">Erlend</a></div>
   		<div class="menu_element"><a href="JanErik.html">Jan Erik</a></div>
 	</div>
-	<div class="container">
+	<div class="container_gruppebilde">
 		<h1>Gruppe 1 - Prosjekt programmering</h1>
 			<div class="img_container">
 			<img src="gruppebilde.jpg" alt="Gruppebilde"/>
