Oppdatert Anja til felles stylesheet

--- a/Nettside/WebContent/Anja.html
+++ b/Nettside/WebContent/Anja.html
@@ -2,13 +2,8 @@
 <html lang="nb">
 <head>
 <meta charset="utf-8">
-<style> 
-.menu {background-color:black;width:100%} 
-.menu_element {height:40px;width:20%;padding: 10px 0px;background-color:black;text-align:center; float:left;}
-.menu_element a{color:white;text-decoration:none;}
-.textfield {width:50%;float:right}
-</style>
 <title>Programmering-Anja</title>
+<link rel="stylesheet" href="JEStyleSheet.css">
 
 </head>
 
@@ -22,14 +17,14 @@
   <div class="menu_element"><a href="JanErik.html">Jan Erik</a></div>
 </div>
 
-<h1 style="color:SteelBlue;">Anja</h1>
+<h1>Anja</h1>
 
-<img src="Anja.jpg" alt="Profilbilde_Anja" style="width:40%; float:left;">
+<img src="Anja.jpg" alt="Profilbilde_Anja" style="width:40%">
 
 <div class="textfield"> <p> Anja har bakgrunn fra matematikk, administrasjon, undervisning og eksamen.
 </p>
 
-<h2 style="color:SteelBlue;"> Erfaring med relevante teknologier </h2>
+<h2> Erfaring med relevante teknologier </h2>
 <ul>
 	<li><strong>Markeringsspråk (markup languages):</strong>
 		<ul>
