Fjernet bakgrunnsfarge Anja

--- a/Nettside/WebContent/Anja.html
+++ b/Nettside/WebContent/Anja.html
@@ -7,7 +7,7 @@
 
 </head>
 
-<body style="background-color:PaleTurquoise"> 
+<body> 
 
 <div class="menu">
   <div class="menu_element"><a href="om_oss.html">Forsiden</a></div>
