La til ny prosjektbeskrivelse

--- a/Nettside/WebContent/JavaEksempler/JavaIntroduksjon.html
+++ b/Nettside/WebContent/JavaEksempler/JavaIntroduksjon.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head lang="nb">
 <meta charset="utf-8">
 <title>Introduksjon</title>
 <link rel="stylesheet" href="JavaCodeStyle.css">
