--- a/Nettside/WebContent/JavaEksempler/JavaIntroduksjon.html
+++ b/Nettside/WebContent/JavaEksempler/JavaIntroduksjon.html
@@ -9,7 +9,7 @@
 	<div class="menu">
   		<div class="menu_element"><a href="../om_oss.html">Forsiden</a></div>
   		<div class="menu_element"><a href="../Anja.html">Anja</a></div>
-  		<div class="menu_element"><a href="#espen">Espen</a></div>
+  		<div class="menu_element"><a href="../Espen.html">Espen</a></div>
   		<div class="menu_element"><a href="../Erlend.html">Erlend</a></div>
   		<div class="menu_element"><a href="../JanErik.html">Jan Erik</a></div>
 	</div>
