Tester en endring på privat side

--- a/Nettside/WebContent/Anja.html
+++ b/Nettside/WebContent/Anja.html
@@ -21,7 +21,7 @@
 
 <img src="Anja.jpg" alt="Profilbilde_Anja" style="width:40%">
 
-<div class="textfield"> <p> Anja har bakgrunn fra matematikk, administrasjon, undervisning og eksamen.
+<div class="paragrafer"> <p> Anja har bakgrunn fra matematikk, administrasjon, undervisning og eksamen.
 </p>
 
 <h2> Erfaring med relevante teknologier </h2>
