Fikset feil fra W3's HTML sjekk

--- a/Nettside/WebContent/JanErik.html
+++ b/Nettside/WebContent/JanErik.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head lang="nb">
 <meta charset="utf-8">
 <title>Jan Erik</title>
 <link rel="stylesheet" href="JEStyleSheet.css">
@@ -15,7 +15,7 @@
 	</div>
 	<div class="container">
 		
-		<img src="Janerik.jpeg" width=250 height=300/>
+		<img src="Janerik.jpeg" width=250 height=300 alt="Jan Erik">
 	
 		<h2>Erfaring i programmering:</h2>
 
