--- a/Nettside/WebContent/JavaEksempler/If.html
+++ b/Nettside/WebContent/JavaEksempler/If.html
@@ -100,7 +100,7 @@ public class GjettTall {
 			Det er her "else if" kommer inn. Vi kan skrive en liten "else if" som spør tallet er større enn det hemmelige tallet.<br>
 			Denne burde komme etter slutten av if, dvs. etter høyre krøllparentes.</p>
 <div class=code><pre>
-else if(tall &gt hemmeligTall){
+else if(tall &gt; hemmeligTall){
 
 	showMessageDialog(null, "tallet du gjettet er for stort");
 
@@ -112,7 +112,7 @@ else if(tall &gt hemmeligTall){
 			Vi kan også lage en til en ny "else if" for å se om tallet er mindre enn hemmeligTall.<br>
 			Denne setter vi igjen etter slutten av den forrige "else if":</p>
 <div class=code><pre>
-else if (tall &lt hemmeligTall) {
+else if (tall &lt; hemmeligTall) {
 
 	showMessageDialog(null, "Tallet du gjettet er for lite");
 	
