Byttet om så alle profilbilder havner på samme side av siden

--- a/Nettside/WebContent/Anja.html
+++ b/Nettside/WebContent/Anja.html
@@ -19,6 +19,7 @@
 
 <h1>Anja</h1>
 
+<div class="container">
 <img src="Anja.jpg" alt="Profilbilde_Anja" style="width:40%">
 
 <div class="paragrafer"> <p> Anja har bakgrunn fra matematikk, administrasjon, undervisning og eksamen.
@@ -44,6 +45,6 @@
 		
 </ul>
 </div>
-
+</div>
 </body>
 </html>
