--- a/Nettside/WebContent/JanErik.html
+++ b/Nettside/WebContent/JanErik.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head lang="nb">
+<html lang="nb">
+<head>
 <meta charset="utf-8">
 <title>Jan Erik</title>
 <link rel="stylesheet" href="JEStyleSheet.css">
