Lagt til prosjektbeskrivelse i menyen... Fjernet gamle CSS som ikke er i bruk lenger

--- a/Nettside/WebContent/Anja.html
+++ b/Nettside/WebContent/Anja.html
@@ -11,6 +11,7 @@
 
 <div class="menu">
   <div class="menu_element"><a href="om_oss.html">Forsiden</a></div>
+  <div class="menu_element"><a href="ProsjektBeskrivelse.html"> Om prosjektet </a></div>
   <div class="menu_element"><a href="Anja.html">Anja</a></div>
   <div class="menu_element"><a href="Espen.html">Espen</a></div>
   <div class="menu_element"><a href="Erlend.html">Erlend</a></div>
