--- a/Nettside/WebContent/ProsjektBeskrivelse.html
+++ b/Nettside/WebContent/ProsjektBeskrivelse.html
@@ -8,6 +8,7 @@
 <body>
 	<div class="menu">
   		<div class="menu_element"><a href="om_oss.html">Forsiden</a></div>
+  		<div class="menu_element"><a href="ProsjektBeskrivelse.html">Om prosjektet</a></div>
   		<div class="menu_element"><a href="Anja.html">Anja</a></div>
   		<div class="menu_element"><a href="Espen.html">Espen</a></div>
   		<div class="menu_element"><a href="Erlend.html">Erlend</a></div>
@@ -43,7 +44,7 @@
 			Det innebærer at nettsiden har potensiale for videreutvikling i form av fremtidige prosjekter for å lage ytterligere innhold som utvider nettsiden til også å omhandle programmering på høyere nivå, eller utvide med flere programmeringsspråk.<br> 
 			Oversettelse av nettsiden til andre språk, i tillegg til muligheter for videreutvikling nevnt i avsnittet om finansiering/lønnsomhet er andre muligheter for å utvide produktet i fremtidige prosjekter ved en senere anledning.<br><br>
 		</p>
-		<a href="Prosjektide.pdf"  download> Beskrivelse av prosjektideen </a>
+		<a href="Prosjektide.pdf" download> Beskrivelse av prosjektideen </a>
 		</div>
 	</div>
 </body>
