--- a/Nettside/WebContent/JanErik.html
+++ b/Nettside/WebContent/JanErik.html
@@ -10,6 +10,7 @@
 <body>
 	<div class="menu">
   		<div class="menu_element"><a href="om_oss.html">Forsiden</a></div>
+  		<div class="menu_element"><a href="ProsjektBeskrivelse.html"> Om prosjektet </a></div>
   		<div class="menu_element"><a href="Anja.html">Anja</a></div>
   		<div class="menu_element"><a href="Espen.html">Espen</a></div>
   		<div class="menu_element"><a href="Erlend.html">Erlend</a></div>
