Forenklet knapper for eksempler og la til animasjon for knappene

--- a/Nettside/WebContent/JavaEksempler/Variabler.html
+++ b/Nettside/WebContent/JavaEksempler/Variabler.html
@@ -7,11 +7,8 @@
 </head>
 <body>
 	<div class="menu">
-  		<div class="menu_element"><a href="../om_oss.html">Forsiden</a></div>
-  		<div class="menu_element"><a href="../Anja.html">Anja</a></div>
-  		<div class="menu_element"><a href="../Espen.html">Espen</a></div>
-  		<div class="menu_element"><a href="../Erlend.html">Erlend</a></div>
-  		<div class="menu_element"><a href="../JanErik.html">Jan Erik</a></div>
+  		<div class="menu_element"><a href="../om_oss.html">Om Oss</a></div>
+  		<div class="menu_element"><a href="../ProsjektBeskrivelse.html">Om Prosjektet</a></div>
 	</div>
 	<div class=container>
 		<h1>Variabler</h1>
