Oppdaterte linkene til bunnmenyen for javaeksempler

--- a/Nettside/WebContent/JavaEksempler/DoWhile.html
+++ b/Nettside/WebContent/JavaEksempler/DoWhile.html
@@ -150,9 +150,9 @@ public class DoWhile {
 </pre></div>
 	</div>
 	<div class="bottom_menu">
-  		<div class="bottom_menu_element"><a href="#forrige_java_eksempel">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="#alle_java_eksempler">Alle Eksempler</a></div>
-  		<div class="bottom_menu_element"><a href="#neste_java_eksempel">Neste Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="While-Lokker.html">Forrige Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="JavaEksempler.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="Tabeller.html">Neste Eksempel</a></div>
 	</div>
 </body>
 </html>
