--- a/Nettside/WebContent/JavaEksempler/EnkelInteraksjon.html
+++ b/Nettside/WebContent/JavaEksempler/EnkelInteraksjon.html
@@ -96,9 +96,9 @@ public class HelloWorld {
 			<p>Hvis du kjører programmet nå, burde det spør det om navn og hilse deg.</p>
 	</div>
 	<div class="bottom_menu">
-  		<div class="bottom_menu_element"><a href="#forrige_java_eksempel">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="#alle_java_eksempler">Alle Eksempler</a></div>
-  		<div class="bottom_menu_element"><a href="#neste_java_eksempel">Neste Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="EnkelInteraksjon.html">Forrige Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="Variabler.html">Neste Eksempel</a></div>
 	</div>
 </body>
 </html>
