--- a/Nettside/WebContent/JavaEksempler/Flerdimensjonelle_Tabeller.html
+++ b/Nettside/WebContent/JavaEksempler/Flerdimensjonelle_Tabeller.html
@@ -79,9 +79,9 @@ lagHendelse();
 			Dette skal vi bruke til å utvide kalenderen i eksempelet for filbehandling.</p>
 	</div>
 	<div class="bottom_menu">
-  		<div class="bottom_menu_element"><a href="#forrige_java_eksempel">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="#alle_java_eksempler">Alle Eksempler</a></div>
-  		<div class="bottom_menu_element"><a href="#neste_java_eksempel">Neste Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="Objekter.html">Forrige Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="JavaEksempler.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="JavaEksempler.html">Neste Eksempel</a></div>
 	</div>
 </body>
 </html>
