--- a/Nettside/WebContent/JavaEksempler/For.html
+++ b/Nettside/WebContent/JavaEksempler/For.html
@@ -93,9 +93,9 @@ for (int j = 1; j &lt;= antallLinjer; j++){
 			For hver gang vi går gjennom den ytterste løkken vil vi stoppe ved den innerste løkken og utføre den 7 ganger før vi fortsetter og går til neste linje.</p>
 	</div>
 	<div class="bottom_menu">
-  		<div class="bottom_menu_element"><a href="#forrige_java_eksempel">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="#alle_java_eksempler">Alle Eksempler</a></div>
-  		<div class="bottom_menu_element"><a href="#neste_java_eksempel">Neste Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="If.html">Forrige Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="JavaEksempler.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="Switch.html">Neste Eksempel</a></div>
 	</div>
 </body>
 </html>
