--- a/Nettside/WebContent/JavaEksempler/If.html
+++ b/Nettside/WebContent/JavaEksempler/If.html
@@ -120,9 +120,9 @@ else if (tall &lt; hemmeligTall) {
 			else sier bare hva som skal skje i alle andre tilfeller, og skrives etter alle if og "else if" for å dekke resten av tilfellene.</p>
 	</div>
 	<div class="bottom_menu">
-  		<div class="bottom_menu_element"><a href="#forrige_java_eksempel">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="#alle_java_eksempler">Alle Eksempler</a></div>
-  		<div class="bottom_menu_element"><a href="#neste_java_eksempel">Neste Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="Kommentarer.html">Forrige Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="JavaEksempler.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="For.html">Neste Eksempel</a></div>
 	</div>
 </body>
 </html>
