--- a/Nettside/WebContent/JavaEksempler/Objekter.html
+++ b/Nettside/WebContent/JavaEksempler/Objekter.html
@@ -148,9 +148,9 @@ System.out.println(youtube.likURL(wikipedia));
 			Du kan lage hvilke som helst andre metoder og variabler for dette objektet, det er det som gjør de så nyttige.</p>
 	</div>
 	<div class="bottom_menu">
-  		<div class="bottom_menu_element"><a href="#forrige_java_eksempel">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="#alle_java_eksempler">Alle Eksempler</a></div>
-  		<div class="bottom_menu_element"><a href="#neste_java_eksempel">Neste Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="EgneMetoder.html">Forrige Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="JavaEksempler.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="Flerdimensjonelle_Tabeller.html">Neste Eksempel</a></div>
 	</div>
 </body>
 </html>
