--- a/Nettside/WebContent/JavaEksempler/Tabeller.html
+++ b/Nettside/WebContent/JavaEksempler/Tabeller.html
@@ -106,9 +106,9 @@ System.out.print("Tredje verdi i tab: " + tab[2]);
 			Slike ting er viktig å huske når du bruker tabeller og løkker, og kan ofte gi feil.<br></p>
 	</div>
 	<div class="bottom_menu">
-  		<div class="bottom_menu_element"><a href="#forrige_java_eksempel">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="#alle_java_eksempler">Alle Eksempler</a></div>
-  		<div class="bottom_menu_element"><a href="#neste_java_eksempel">Neste Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="DoWhile.html">Forrige Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="JavaEksempler.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="EgneMetoder.html">Neste Eksempel</a></div>
 	</div>
 </body>
 </html>
