--- a/Nettside/WebContent/JavaEksempler/While-Lokker.html
+++ b/Nettside/WebContent/JavaEksempler/While-Lokker.html
@@ -123,9 +123,9 @@ public class WhileLokker {
 }</pre></div>
 	</div>
 	<div class="bottom_menu">
-  		<div class="bottom_menu_element"><a href="#forrige_java_eksempel">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="#alle_java_eksempler">Alle Eksempler</a></div>
-  		<div class="bottom_menu_element"><a href="#neste_java_eksempel">Neste Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="Switch.html">Forrige Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="JavaEksempler.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="DoWhile.html">Neste Eksempel</a></div>
 	</div>
 </body>
 </html>
