--- a/Nettside/WebContent/JavaEksempler/EgneMetoder.html
+++ b/Nettside/WebContent/JavaEksempler/EgneMetoder.html
@@ -90,9 +90,9 @@ System.out.println(EksterneMetoder.oppHoy(5, 3));
 			Nå kan vi ikke ha en negativt potens, eller noe som ikke er et heltall som potens, men vi kan allerede se likheten mellom dette og Math.pow() metoden.</p>
 	</div>
 	<div class="bottom_menu">
-  		<div class="bottom_menu_element"><a href="#forrige_java_eksempel">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="#alle_java_eksempler">Alle Eksempler</a></div>
-  		<div class="bottom_menu_element"><a href="#neste_java_eksempel">Neste Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="Tabeller.html">Forrige Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="JavaEksempler.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="Objekter.html">Neste Eksempel</a></div>
 	</div>
 </body>
 </html>
