--- a/Nettside/WebContent/JavaEksempler/Kommentarer.html
+++ b/Nettside/WebContent/JavaEksempler/Kommentarer.html
@@ -20,9 +20,9 @@
 			andre nødvendigvis være vant til dine arbeidsmetoder.</p>
 	</div>
 	<div class="bottom_menu">
-  		<div class="bottom_menu_element"><a href="#forrige_java_eksempel">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="#alle_java_eksempler">Alle Eksempler</a></div>
-  		<div class="bottom_menu_element"><a href="#neste_java_eksempel">Neste Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="Variabler.html">Forrige Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="If.html">Neste Eksempel</a></div>
 	</div>
 </body>
 </html>
