--- a/Nettside/WebContent/JavaEksempler/Switch.html
+++ b/Nettside/WebContent/JavaEksempler/Switch.html
@@ -55,9 +55,9 @@ System.out.println("Prisen er: " + pris);
 		<p>For å gi et annet eksempel på hvor dette hadde vært bruksomt, kunne du brukt switch til å bevege en karakter i et spill en viss retning basert på hvilke knapp som blir presset.</p>
 	</div>
 	<div class="bottom_menu">
-  		<div class="bottom_menu_element"><a href="#forrige_java_eksempel">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="#alle_java_eksempler">Alle Eksempler</a></div>
-  		<div class="bottom_menu_element"><a href="#neste_java_eksempel">Neste Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="For.html">Forrige Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="JavaEksempler.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="While-Lokker.html">Neste Eksempel</a></div>
 	</div>
 </body>
 </html>
