--- a/Nettside/WebContent/JavaEksempler/Variabler.html
+++ b/Nettside/WebContent/JavaEksempler/Variabler.html
@@ -87,9 +87,9 @@ public class HelloWorld {
 }</pre></div>
 	</div>
 	<div class="bottom_menu">
-  		<div class="bottom_menu_element"><a href="#forrige_java_eksempel">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="#alle_java_eksempler">Alle Eksempler</a></div>
-  		<div class="bottom_menu_element"><a href="#neste_java_eksempel">Neste Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="EnkelInteraksjon.html">Forrige Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="Kommentarer.html">Neste Eksempel</a></div>
 	</div>
 </body>
 </html>
