--- a/Nettside/WebContent/JavaEksempler/While-Lokker.html
+++ b/Nettside/WebContent/JavaEksempler/While-Lokker.html
@@ -8,6 +8,7 @@
 <body>
 	<div class="menu">
   		<div class="menu_element"><a href="../om_oss.html">Om Oss</a></div>
+  		<div class="menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
   		<div class="menu_element"><a href="../ProsjektBeskrivelse.html">Om Prosjektet</a></div>
 	</div>
 	<div class=container>
